NOJIRA Modify recommended JRUBY_OPTS for developers