@@ -98,10 +98,10 @@ http://www.oracle.com/technetwork/java/javase/downloads/index.html
     # If it mentions "broken", you'll need to reinstall
     ```
 
-1. Make JRuby faster, give it lots of RAM, & enable C extensions by running this or put in your .bashrc:
+1. Make JRuby faster for local development by running this or put in your .bashrc:
 
     ``` bash
-    export JRUBY_OPTS="-Xcext.enabled=true -X-C -J-Xms900m -J-Xmx1200m -J-XX:MaxPermSize=500m --headless -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-Xcompile.invokedynamic=false -J-XX:+UseConcMarkSweepGC"
+    export JRUBY_OPTS="--dev"
     ```
 
 1. Download and install xvfb. On a Mac, you get xvfb by [installing XQuartz](http://xquartz.macosforge.org/landing/).
